--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "8.0.13"
+        }
     },
     "extra": {
         "laravel": {
